[metadata]
name = python-congressclient
summary = Client for Congress
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    congressclient

[entry_points]
openstack.cli.extension =
    congressclient = congressclient.osc.osc_plugin

openstack.congressclient.v1 =
    congress_policy_rule_create = congressclient.osc.v1.policy:CreatePolicyRule
    congress_policy_rule_delete = congressclient.osc.v1.policy:DeletePolicyRule
    congress_policy_rule_show = congressclient.osc.v1.policy:ShowPolicyRule
    congress_policy_rule_list = congressclient.osc.v1.policy:ListPolicyRules
    congress_policy_list = congressclient.osc.v1.policy:ListPolicy
    congress_policy_row_list = congressclient.osc.v1.policy:ListPolicyRows
    congress_policy_table_list = congressclient.osc.v1.policy:ListPolicyTables
    congress_policy_simulate = congressclient.osc.v1.policy:SimulatePolicy
    congress_datasource_list = congressclient.osc.v1.datasource:ListDatasources
    congress_datasource_table_list = congressclient.osc.v1.datasource:ListDatasourceTables
    congress_datasource_row_list = congressclient.osc.v1.datasource:ListDatasourceRows

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = congressclient/locale
domain = python-congressclient

[update_catalog]
domain = python-congressclient
output_dir = congressclient/locale
input_file = congressclient/locale/python-congressclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = congressclient/locale/python-congressclient.pot
